--- a/usuarios/templates/home.html
+++ b/usuarios/templates/home.html
@@ -53,10 +53,10 @@
 </section>
 
 
-<section id="sobre" class="p-10 bg-gray-100 pb-20">
+<section id="sobre" class="p-10 bg-gray-800 pb-20">
   <div class="text-left max-w-3xl mx-auto">
       <h2 class="text-2xl font-bold text-green-700">Sobre Eco Storage</h2>
-      <p class="mt-4">Aqui no Eco Storage, nos dedicamos a oferecer soluções de armazenamento sustentável para um futuro melhor. Nossa missão é garantir que nossos métodos sejam eficientes e eco-friendly, ajudando a preservar o planeta para as próximas gerações.</p>
+      <p class="mt-4">O Eco Storage é uma plataforma que busca conectar aqueles que distribuem resíduos recicláveis àqueles interessados em utilizá-los, visando expandir o uso de soluções sustentáveis com maior eficiência para ambos.</p>
   </div>
 </section>
 
